--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "fideloper/proxy": "^4.0",
         "grimzy/laravel-mysql-spatial": "^2.1",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "php-ds/php-ds": "^1.2"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
